CompFinal/sintatico.output
Gramática

    0 $accept: programa $end

    1 $@1: ε

    2 $@2: ε

    3 programa: cabecalho definicoes variaveis $@1 T_INICIO lista_comandos T_FIM $@2

    4 cabecalho: T_PROGRAMA T_IDENTIF

    5 tipo: T_LOGICO
    6     | T_INTEIRO
    7     | T_REGISTRO T_IDENTIF

    8 definicoes: define definicoes
    9           | ε

   10 $@3: ε

   11 define: T_DEF $@3 definicao_campos T_FIMDEF T_IDENTIF

   12 definicao_campos: tipo lista_campos definicao_campos
   13                 | tipo lista_campos

   14 lista_campos: lista_campos T_IDENTIF
   15             | T_IDENTIF

   16 variaveis: ε
   17          | declaracao_variaveis

   18 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
   19                     | tipo lista_variaveis

   20 lista_variaveis: lista_variaveis T_IDENTIF
   21                | T_IDENTIF

   22 lista_comandos: ε
   23               | comando lista_comandos

   24 comando: entrada_saida
   25        | atribuicao
   26        | selecao
   27        | repeticao

   28 entrada_saida: entrada
   29              | saida

   30 entrada: T_LEIA expressao_acesso

   31 saida: T_ESCREVA expressao

   32 $@4: ε

   33 atribuicao: expressao_acesso $@4 T_ATRIB expressao

   34 $@5: ε

   35 $@6: ε

   36 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

   37 $@7: ε

   38 $@8: ε

   39 repeticao: T_ENQTO $@7 expressao T_FACA $@8 lista_comandos T_FIMENQTO

   40 expressao: expressao T_VEZES expressao
   41          | expressao T_DIV expressao
   42          | expressao T_MAIS expressao
   43          | expressao T_MENOS expressao
   44          | expressao T_MAIOR expressao
   45          | expressao T_MENOR expressao
   46          | expressao T_IGUAL expressao
   47          | expressao T_E expressao
   48          | expressao T_OU expressao
   49          | termo

   50 $@9: ε

   51 expressao_acesso: T_IDPONTO $@9 expressao_acesso
   52                 | T_IDENTIF

   53 termo: expressao_acesso
   54      | T_NUMERO
   55      | T_V
   56      | T_F
   57      | T_NAO termo
   58      | T_ABRE expressao T_FECHA


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 4
    T_INICIO (259) 3
    T_FIM (260) 3
    T_IDENTIF (261) 4 7 11 14 15 20 21 52
    T_LEIA (262) 30
    T_ESCREVA (263) 31
    T_ENQTO (264) 39
    T_FACA (265) 39
    T_FIMENQTO (266) 39
    T_SE (267) 36
    T_ENTAO (268) 36
    T_SENAO (269) 36
    T_FIMSE (270) 36
    T_ATRIB (271) 33
    T_VEZES (272) 40
    T_DIV (273) 41
    T_MAIS (274) 42
    T_MENOS (275) 43
    T_MAIOR (276) 44
    T_MENOR (277) 45
    T_IGUAL (278) 46
    T_E (279) 47
    T_OU (280) 48
    T_V (281) 55
    T_F (282) 56
    T_NUMERO (283) 54
    T_NAO (284) 57
    T_ABRE (285) 58
    T_FECHA (286) 58
    T_LOGICO (287) 5
    T_INTEIRO (288) 6
    T_DEF (289) 11
    T_FIMDEF (290) 11
    T_REGISTRO (291) 7
    T_IDPONTO (292) 51


Não terminais com as regras onde eles aparecem

    $accept (38)
        à esquerda: 0
    programa (39)
        à esquerda: 3
        à direita: 0
    $@1 (40)
        à esquerda: 1
        à direita: 3
    $@2 (41)
        à esquerda: 2
        à direita: 3
    cabecalho (42)
        à esquerda: 4
        à direita: 3
    tipo (43)
        à esquerda: 5 6 7
        à direita: 12 13 18 19
    definicoes (44)
        à esquerda: 8 9
        à direita: 3 8
    define (45)
        à esquerda: 11
        à direita: 8
    $@3 (46)
        à esquerda: 10
        à direita: 11
    definicao_campos (47)
        à esquerda: 12 13
        à direita: 11 12
    lista_campos (48)
        à esquerda: 14 15
        à direita: 12 13 14
    variaveis (49)
        à esquerda: 16 17
        à direita: 3
    declaracao_variaveis (50)
        à esquerda: 18 19
        à direita: 17 18
    lista_variaveis (51)
        à esquerda: 20 21
        à direita: 18 19 20
    lista_comandos (52)
        à esquerda: 22 23
        à direita: 3 23 36 39
    comando (53)
        à esquerda: 24 25 26 27
        à direita: 23
    entrada_saida (54)
        à esquerda: 28 29
        à direita: 24
    entrada (55)
        à esquerda: 30
        à direita: 28
    saida (56)
        à esquerda: 31
        à direita: 29
    atribuicao (57)
        à esquerda: 33
        à direita: 25
    $@4 (58)
        à esquerda: 32
        à direita: 33
    selecao (59)
        à esquerda: 36
        à direita: 26
    $@5 (60)
        à esquerda: 34
        à direita: 36
    $@6 (61)
        à esquerda: 35
        à direita: 36
    repeticao (62)
        à esquerda: 39
        à direita: 27
    $@7 (63)
        à esquerda: 37
        à direita: 39
    $@8 (64)
        à esquerda: 38
        à direita: 39
    expressao (65)
        à esquerda: 40 41 42 43 44 45 46 47 48 49
        à direita: 31 33 36 39 40 41 42 43 44 45 46 47 48 58
    expressao_acesso (66)
        à esquerda: 51 52
        à direita: 30 33 51 53
    $@9 (67)
        à esquerda: 50
        à direita: 51
    termo (68)
        à esquerda: 53 54 55 56 57 58
        à direita: 49 57


Estado 0

    0 $accept: • programa $end

    T_PROGRAMA  deslocar, e ir ao estado 1

    programa   ir ao estado 2
    cabecalho  ir ao estado 3


Estado 1

    4 cabecalho: T_PROGRAMA • T_IDENTIF

    T_IDENTIF  deslocar, e ir ao estado 4


Estado 2

    0 $accept: programa • $end

    $end  deslocar, e ir ao estado 5


Estado 3

    3 programa: cabecalho • definicoes variaveis $@1 T_INICIO lista_comandos T_FIM $@2

    T_DEF  deslocar, e ir ao estado 6

    $padrão  reduzir usando a regra 9 (definicoes)

    definicoes  ir ao estado 7
    define      ir ao estado 8


Estado 4

    4 cabecalho: T_PROGRAMA T_IDENTIF •

    $padrão  reduzir usando a regra 4 (cabecalho)


Estado 5

    0 $accept: programa $end •

    $padrão  aceitar


Estado 6

   11 define: T_DEF • $@3 definicao_campos T_FIMDEF T_IDENTIF

    $padrão  reduzir usando a regra 10 ($@3)

    $@3  ir ao estado 9


Estado 7

    3 programa: cabecalho definicoes • variaveis $@1 T_INICIO lista_comandos T_FIM $@2

    T_LOGICO    deslocar, e ir ao estado 10
    T_INTEIRO   deslocar, e ir ao estado 11
    T_REGISTRO  deslocar, e ir ao estado 12

    $padrão  reduzir usando a regra 16 (variaveis)

    tipo                  ir ao estado 13
    variaveis             ir ao estado 14
    declaracao_variaveis  ir ao estado 15


Estado 8

    8 definicoes: define • definicoes

    T_DEF  deslocar, e ir ao estado 6

    $padrão  reduzir usando a regra 9 (definicoes)

    definicoes  ir ao estado 16
    define      ir ao estado 8


Estado 9

   11 define: T_DEF $@3 • definicao_campos T_FIMDEF T_IDENTIF

    T_LOGICO    deslocar, e ir ao estado 10
    T_INTEIRO   deslocar, e ir ao estado 11
    T_REGISTRO  deslocar, e ir ao estado 12

    tipo              ir ao estado 17
    definicao_campos  ir ao estado 18


Estado 10

    5 tipo: T_LOGICO •

    $padrão  reduzir usando a regra 5 (tipo)


Estado 11

    6 tipo: T_INTEIRO •

    $padrão  reduzir usando a regra 6 (tipo)


Estado 12

    7 tipo: T_REGISTRO • T_IDENTIF

    T_IDENTIF  deslocar, e ir ao estado 19


Estado 13

   18 declaracao_variaveis: tipo • lista_variaveis declaracao_variaveis
   19                     | tipo • lista_variaveis

    T_IDENTIF  deslocar, e ir ao estado 20

    lista_variaveis  ir ao estado 21


Estado 14

    3 programa: cabecalho definicoes variaveis • $@1 T_INICIO lista_comandos T_FIM $@2

    $padrão  reduzir usando a regra 1 ($@1)

    $@1  ir ao estado 22


Estado 15

   17 variaveis: declaracao_variaveis •

    $padrão  reduzir usando a regra 17 (variaveis)


Estado 16

    8 definicoes: define definicoes •

    $padrão  reduzir usando a regra 8 (definicoes)


Estado 17

   12 definicao_campos: tipo • lista_campos definicao_campos
   13                 | tipo • lista_campos

    T_IDENTIF  deslocar, e ir ao estado 23

    lista_campos  ir ao estado 24


Estado 18

   11 define: T_DEF $@3 definicao_campos • T_FIMDEF T_IDENTIF

    T_FIMDEF  deslocar, e ir ao estado 25


Estado 19

    7 tipo: T_REGISTRO T_IDENTIF •

    $padrão  reduzir usando a regra 7 (tipo)


Estado 20

   21 lista_variaveis: T_IDENTIF •

    $padrão  reduzir usando a regra 21 (lista_variaveis)


Estado 21

   18 declaracao_variaveis: tipo lista_variaveis • declaracao_variaveis
   19                     | tipo lista_variaveis •
   20 lista_variaveis: lista_variaveis • T_IDENTIF

    T_IDENTIF   deslocar, e ir ao estado 26
    T_LOGICO    deslocar, e ir ao estado 10
    T_INTEIRO   deslocar, e ir ao estado 11
    T_REGISTRO  deslocar, e ir ao estado 12

    $padrão  reduzir usando a regra 19 (declaracao_variaveis)

    tipo                  ir ao estado 13
    declaracao_variaveis  ir ao estado 27


Estado 22

    3 programa: cabecalho definicoes variaveis $@1 • T_INICIO lista_comandos T_FIM $@2

    T_INICIO  deslocar, e ir ao estado 28


Estado 23

   15 lista_campos: T_IDENTIF •

    $padrão  reduzir usando a regra 15 (lista_campos)


Estado 24

   12 definicao_campos: tipo lista_campos • definicao_campos
   13                 | tipo lista_campos •
   14 lista_campos: lista_campos • T_IDENTIF

    T_IDENTIF   deslocar, e ir ao estado 29
    T_LOGICO    deslocar, e ir ao estado 10
    T_INTEIRO   deslocar, e ir ao estado 11
    T_REGISTRO  deslocar, e ir ao estado 12

    $padrão  reduzir usando a regra 13 (definicao_campos)

    tipo              ir ao estado 17
    definicao_campos  ir ao estado 30


Estado 25

   11 define: T_DEF $@3 definicao_campos T_FIMDEF • T_IDENTIF

    T_IDENTIF  deslocar, e ir ao estado 31


Estado 26

   20 lista_variaveis: lista_variaveis T_IDENTIF •

    $padrão  reduzir usando a regra 20 (lista_variaveis)


Estado 27

   18 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis •

    $padrão  reduzir usando a regra 18 (declaracao_variaveis)


Estado 28

    3 programa: cabecalho definicoes variaveis $@1 T_INICIO • lista_comandos T_FIM $@2

    T_IDENTIF  deslocar, e ir ao estado 32
    T_LEIA     deslocar, e ir ao estado 33
    T_ESCREVA  deslocar, e ir ao estado 34
    T_ENQTO    deslocar, e ir ao estado 35
    T_SE       deslocar, e ir ao estado 36
    T_IDPONTO  deslocar, e ir ao estado 37

    $padrão  reduzir usando a regra 22 (lista_comandos)

    lista_comandos    ir ao estado 38
    comando           ir ao estado 39
    entrada_saida     ir ao estado 40
    entrada           ir ao estado 41
    saida             ir ao estado 42
    atribuicao        ir ao estado 43
    selecao           ir ao estado 44
    repeticao         ir ao estado 45
    expressao_acesso  ir ao estado 46


Estado 29

   14 lista_campos: lista_campos T_IDENTIF •

    $padrão  reduzir usando a regra 14 (lista_campos)


Estado 30

   12 definicao_campos: tipo lista_campos definicao_campos •

    $padrão  reduzir usando a regra 12 (definicao_campos)


Estado 31

   11 define: T_DEF $@3 definicao_campos T_FIMDEF T_IDENTIF •

    $padrão  reduzir usando a regra 11 (define)


Estado 32

   52 expressao_acesso: T_IDENTIF •

    $padrão  reduzir usando a regra 52 (expressao_acesso)


Estado 33

   30 entrada: T_LEIA • expressao_acesso

    T_IDENTIF  deslocar, e ir ao estado 32
    T_IDPONTO  deslocar, e ir ao estado 37

    expressao_acesso  ir ao estado 47


Estado 34

   31 saida: T_ESCREVA • expressao

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 48
    T_F        deslocar, e ir ao estado 49
    T_NUMERO   deslocar, e ir ao estado 50
    T_NAO      deslocar, e ir ao estado 51
    T_ABRE     deslocar, e ir ao estado 52
    T_IDPONTO  deslocar, e ir ao estado 37

    expressao         ir ao estado 53
    expressao_acesso  ir ao estado 54
    termo             ir ao estado 55


Estado 35

   39 repeticao: T_ENQTO • $@7 expressao T_FACA $@8 lista_comandos T_FIMENQTO

    $padrão  reduzir usando a regra 37 ($@7)

    $@7  ir ao estado 56


Estado 36

   36 selecao: T_SE • expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 48
    T_F        deslocar, e ir ao estado 49
    T_NUMERO   deslocar, e ir ao estado 50
    T_NAO      deslocar, e ir ao estado 51
    T_ABRE     deslocar, e ir ao estado 52
    T_IDPONTO  deslocar, e ir ao estado 37

    expressao         ir ao estado 57
    expressao_acesso  ir ao estado 54
    termo             ir ao estado 55


Estado 37

   51 expressao_acesso: T_IDPONTO • $@9 expressao_acesso

    $padrão  reduzir usando a regra 50 ($@9)

    $@9  ir ao estado 58


Estado 38

    3 programa: cabecalho definicoes variaveis $@1 T_INICIO lista_comandos • T_FIM $@2

    T_FIM  deslocar, e ir ao estado 59


Estado 39

   23 lista_comandos: comando • lista_comandos

    T_IDENTIF  deslocar, e ir ao estado 32
    T_LEIA     deslocar, e ir ao estado 33
    T_ESCREVA  deslocar, e ir ao estado 34
    T_ENQTO    deslocar, e ir ao estado 35
    T_SE       deslocar, e ir ao estado 36
    T_IDPONTO  deslocar, e ir ao estado 37

    $padrão  reduzir usando a regra 22 (lista_comandos)

    lista_comandos    ir ao estado 60
    comando           ir ao estado 39
    entrada_saida     ir ao estado 40
    entrada           ir ao estado 41
    saida             ir ao estado 42
    atribuicao        ir ao estado 43
    selecao           ir ao estado 44
    repeticao         ir ao estado 45
    expressao_acesso  ir ao estado 46


Estado 40

   24 comando: entrada_saida •

    $padrão  reduzir usando a regra 24 (comando)


Estado 41

   28 entrada_saida: entrada •

    $padrão  reduzir usando a regra 28 (entrada_saida)


Estado 42

   29 entrada_saida: saida •

    $padrão  reduzir usando a regra 29 (entrada_saida)


Estado 43

   25 comando: atribuicao •

    $padrão  reduzir usando a regra 25 (comando)


Estado 44

   26 comando: selecao •

    $padrão  reduzir usando a regra 26 (comando)


Estado 45

   27 comando: repeticao •

    $padrão  reduzir usando a regra 27 (comando)


Estado 46

   33 atribuicao: expressao_acesso • $@4 T_ATRIB expressao

    $padrão  reduzir usando a regra 32 ($@4)

    $@4  ir ao estado 61


Estado 47

   30 entrada: T_LEIA expressao_acesso •

    $padrão  reduzir usando a regra 30 (entrada)


Estado 48

   55 termo: T_V •

    $padrão  reduzir usando a regra 55 (termo)


Estado 49

   56 termo: T_F •

    $padrão  reduzir usando a regra 56 (termo)


Estado 50

   54 termo: T_NUMERO •

    $padrão  reduzir usando a regra 54 (termo)


Estado 51

   57 termo: T_NAO • termo

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 48
    T_F        deslocar, e ir ao estado 49
    T_NUMERO   deslocar, e ir ao estado 50
    T_NAO      deslocar, e ir ao estado 51
    T_ABRE     deslocar, e ir ao estado 52
    T_IDPONTO  deslocar, e ir ao estado 37

    expressao_acesso  ir ao estado 54
    termo             ir ao estado 62


Estado 52

   58 termo: T_ABRE • expressao T_FECHA

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 48
    T_F        deslocar, e ir ao estado 49
    T_NUMERO   deslocar, e ir ao estado 50
    T_NAO      deslocar, e ir ao estado 51
    T_ABRE     deslocar, e ir ao estado 52
    T_IDPONTO  deslocar, e ir ao estado 37

    expressao         ir ao estado 63
    expressao_acesso  ir ao estado 54
    termo             ir ao estado 55


Estado 53

   31 saida: T_ESCREVA expressao •
   40 expressao: expressao • T_VEZES expressao
   41          | expressao • T_DIV expressao
   42          | expressao • T_MAIS expressao
   43          | expressao • T_MENOS expressao
   44          | expressao • T_MAIOR expressao
   45          | expressao • T_MENOR expressao
   46          | expressao • T_IGUAL expressao
   47          | expressao • T_E expressao
   48          | expressao • T_OU expressao

    T_VEZES  deslocar, e ir ao estado 64
    T_DIV    deslocar, e ir ao estado 65
    T_MAIS   deslocar, e ir ao estado 66
    T_MENOS  deslocar, e ir ao estado 67
    T_MAIOR  deslocar, e ir ao estado 68
    T_MENOR  deslocar, e ir ao estado 69
    T_IGUAL  deslocar, e ir ao estado 70
    T_E      deslocar, e ir ao estado 71
    T_OU     deslocar, e ir ao estado 72

    $padrão  reduzir usando a regra 31 (saida)


Estado 54

   53 termo: expressao_acesso •

    $padrão  reduzir usando a regra 53 (termo)


Estado 55

   49 expressao: termo •

    $padrão  reduzir usando a regra 49 (expressao)


Estado 56

   39 repeticao: T_ENQTO $@7 • expressao T_FACA $@8 lista_comandos T_FIMENQTO

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 48
    T_F        deslocar, e ir ao estado 49
    T_NUMERO   deslocar, e ir ao estado 50
    T_NAO      deslocar, e ir ao estado 51
    T_ABRE     deslocar, e ir ao estado 52
    T_IDPONTO  deslocar, e ir ao estado 37

    expressao         ir ao estado 73
    expressao_acesso  ir ao estado 54
    termo             ir ao estado 55


Estado 57

   36 selecao: T_SE expressao • T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE
   40 expressao: expressao • T_VEZES expressao
   41          | expressao • T_DIV expressao
   42          | expressao • T_MAIS expressao
   43          | expressao • T_MENOS expressao
   44          | expressao • T_MAIOR expressao
   45          | expressao • T_MENOR expressao
   46          | expressao • T_IGUAL expressao
   47          | expressao • T_E expressao
   48          | expressao • T_OU expressao
